-- MySQL Script generated by MySQL Workbench
-- Mon 19 Feb 2018 07:45:00 PM EST
-- Model: New Model    Version: 1.0
-- MySQL Workbench Forward Engineering

SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0;
SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0;
SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='TRADITIONAL,ALLOW_INVALID_DATES';

-- -----------------------------------------------------
-- Schema cs4500_spring2018_fishstein
-- -----------------------------------------------------
DROP SCHEMA IF EXISTS `cs4500_spring2018_fishstein` ;

-- -----------------------------------------------------
-- Schema cs4500_spring2018_fishstein
-- -----------------------------------------------------
CREATE SCHEMA IF NOT EXISTS `cs4500_spring2018_fishstein` DEFAULT CHARACTER SET latin1 ;
USE `cs4500_spring2018_fishstein` ;

-- -----------------------------------------------------
-- Table `cs4500_spring2018_fishstein`.`hello`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `cs4500_spring2018_fishstein`.`hello` ;

CREATE TABLE IF NOT EXISTS `cs4500_spring2018_fishstein`.`hello` (
  `id` INT(11) NOT NULL AUTO_INCREMENT,
  `message` VARCHAR(255) NULL DEFAULT NULL,
  PRIMARY KEY (`id`))
ENGINE = InnoDB
DEFAULT CHARACTER SET = latin1;


-- -----------------------------------------------------
-- Table `cs4500_spring2018_fishstein`.`users`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `cs4500_spring2018_fishstein`.`users` ;

CREATE TABLE IF NOT EXISTS `cs4500_spring2018_fishstein`.`users` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `create_time` TIMESTAMP NULL DEFAULT CURRENT_TIMESTAMP,
  `username` VARCHAR(255) NOT NULL,
  `email` VARCHAR(255) NOT NULL,
  `password` VARCHAR(255) NOT NULL,
  `first_name` VARCHAR(63) NULL,
  `last_name` VARCHAR(63) NULL,
  UNIQUE INDEX `id_UNIQUE` (`id` ASC),
  PRIMARY KEY (`id`))
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `cs4500_spring2018_fishstein`.`movies`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `cs4500_spring2018_fishstein`.`movies` ;

CREATE TABLE IF NOT EXISTS `cs4500_spring2018_fishstein`.`movies` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `imdb_id` VARCHAR(16) NOT NULL,
  `primary_title` VARCHAR(255) NOT NULL,
  `original_title` VARCHAR(255) NULL,
  `img` VARCHAR(2083) NULL,
  `year` YEAR NULL,
  `runtime_min` INT NULL,
  `rating` DOUBLE NULL DEFAULT 3,
  `imdb_rating` DOUBLE NULL,
  PRIMARY KEY (`id`, `imdb_id`))
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `cs4500_spring2018_fishstein`.`affiliate_codes`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `cs4500_spring2018_fishstein`.`affiliate_codes` ;

CREATE TABLE IF NOT EXISTS `cs4500_spring2018_fishstein`.`affiliate_codes` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `movies_id` INT NOT NULL,
  `movies_imdb_id` VARCHAR(16) NOT NULL,
  `code` VARCHAR(255) NOT NULL,
  `provider` VARCHAR(255) NULL,
  PRIMARY KEY (`id`, `movies_id`, `movies_imdb_id`),
  INDEX `fk_affiliate_codes_movies1_idx` (`movies_id` ASC, `movies_imdb_id` ASC),
  CONSTRAINT `fk_affiliate_codes_movies1`
    FOREIGN KEY (`movies_id` , `movies_imdb_id`)
    REFERENCES `cs4500_spring2018_fishstein`.`movies` (`id` , `imdb_id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `cs4500_spring2018_fishstein`.`distribution_links`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `cs4500_spring2018_fishstein`.`distribution_links` ;

CREATE TABLE IF NOT EXISTS `cs4500_spring2018_fishstein`.`distribution_links` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `movies_id` INT NOT NULL,
  `movies_imdb_id` VARCHAR(16) NOT NULL,
  `link` VARCHAR(255) NOT NULL,
  PRIMARY KEY (`id`, `movies_id`, `movies_imdb_id`),
  INDEX `fk_distribution_links_movies1_idx` (`movies_id` ASC, `movies_imdb_id` ASC),
  CONSTRAINT `fk_distribution_links_movies1`
    FOREIGN KEY (`movies_id` , `movies_imdb_id`)
    REFERENCES `cs4500_spring2018_fishstein`.`movies` (`id` , `imdb_id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `cs4500_spring2018_fishstein`.`reviews`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `cs4500_spring2018_fishstein`.`reviews` ;

CREATE TABLE IF NOT EXISTS `cs4500_spring2018_fishstein`.`reviews` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `users_id` INT NOT NULL,
  `movies_id` INT NOT NULL,
  `movies_imdb_id` VARCHAR(16) NOT NULL,
  `text` TEXT NULL,
  `rating` INT NOT NULL,
  PRIMARY KEY (`id`, `users_id`, `movies_id`, `movies_imdb_id`),
  INDEX `fk_reviews_movies1_idx` (`movies_id` ASC, `movies_imdb_id` ASC),
  CONSTRAINT `fk_reviews_users1`
    FOREIGN KEY (`users_id`)
    REFERENCES `cs4500_spring2018_fishstein`.`users` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_reviews_movies1`
    FOREIGN KEY (`movies_id` , `movies_imdb_id`)
    REFERENCES `cs4500_spring2018_fishstein`.`movies` (`id` , `imdb_id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `cs4500_spring2018_fishstein`.`playlists`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `cs4500_spring2018_fishstein`.`playlists` ;

CREATE TABLE IF NOT EXISTS `cs4500_spring2018_fishstein`.`playlists` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `users_id` INT NOT NULL,
  `name` VARCHAR(127) NOT NULL,
  `description` TEXT NULL,
  PRIMARY KEY (`id`, `users_id`),
  CONSTRAINT `fk_playlists_users1`
    FOREIGN KEY (`users_id`)
    REFERENCES `cs4500_spring2018_fishstein`.`users` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `cs4500_spring2018_fishstein`.`playlist_items`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `cs4500_spring2018_fishstein`.`playlist_items` ;

CREATE TABLE IF NOT EXISTS `cs4500_spring2018_fishstein`.`playlist_items` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `playlists_id` INT NOT NULL,
  `playlists_users_id` INT NOT NULL,
  `movies_id` INT NOT NULL,
  `movies_imdb_id` VARCHAR(16) NOT NULL,
  PRIMARY KEY (`id`, `playlists_id`, `playlists_users_id`, `movies_id`, `movies_imdb_id`),
  INDEX `fk_playlist_items_playlists1_idx` (`playlists_id` ASC, `playlists_users_id` ASC),
  INDEX `fk_playlist_items_movies1_idx` (`movies_id` ASC, `movies_imdb_id` ASC),
  CONSTRAINT `fk_playlist_items_playlists1`
    FOREIGN KEY (`playlists_id` , `playlists_users_id`)
    REFERENCES `cs4500_spring2018_fishstein`.`playlists` (`id` , `users_id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_playlist_items_movies1`
    FOREIGN KEY (`movies_id` , `movies_imdb_id`)
    REFERENCES `cs4500_spring2018_fishstein`.`movies` (`id` , `imdb_id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `cs4500_spring2018_fishstein`.`playlist_comments`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `cs4500_spring2018_fishstein`.`playlist_comments` ;

CREATE TABLE IF NOT EXISTS `cs4500_spring2018_fishstein`.`playlist_comments` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `text` TEXT NOT NULL,
  `playlists_id` INT NOT NULL,
  `playlists_users_id` INT NOT NULL,
  `users_id` INT NOT NULL,
  PRIMARY KEY (`id`, `playlists_id`, `playlists_users_id`, `users_id`),
  INDEX `fk_playlist_comments_playlists1_idx` (`playlists_id` ASC, `playlists_users_id` ASC),
  INDEX `fk_playlist_comments_users1_idx` (`users_id` ASC),
  CONSTRAINT `fk_playlist_comments_playlists1`
    FOREIGN KEY (`playlists_id` , `playlists_users_id`)
    REFERENCES `cs4500_spring2018_fishstein`.`playlists` (`id` , `users_id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_playlist_comments_users1`
    FOREIGN KEY (`users_id`)
    REFERENCES `cs4500_spring2018_fishstein`.`users` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `cs4500_spring2018_fishstein`.`review_comments`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `cs4500_spring2018_fishstein`.`review_comments` ;

CREATE TABLE IF NOT EXISTS `cs4500_spring2018_fishstein`.`review_comments` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `users_id` INT NOT NULL,
  `reviews_id` INT NOT NULL,
  `reviews_users_id` INT NOT NULL,
  `reviews_movies_id` INT NOT NULL,
  `reviews_movies_imdb_id` VARCHAR(16) NOT NULL,
  `text` TEXT NOT NULL,
  PRIMARY KEY (`id`, `users_id`, `reviews_id`, `reviews_users_id`, `reviews_movies_id`, `reviews_movies_imdb_id`),
  INDEX `fk_review_comments_users1_idx` (`users_id` ASC),
  INDEX `fk_review_comments_reviews1_idx` (`reviews_id` ASC, `reviews_users_id` ASC, `reviews_movies_id` ASC, `reviews_movies_imdb_id` ASC),
  CONSTRAINT `fk_review_comments_users1`
    FOREIGN KEY (`users_id`)
    REFERENCES `cs4500_spring2018_fishstein`.`users` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_review_comments_reviews1`
    FOREIGN KEY (`reviews_id` , `reviews_users_id` , `reviews_movies_id` , `reviews_movies_imdb_id`)
    REFERENCES `cs4500_spring2018_fishstein`.`reviews` (`id` , `users_id` , `movies_id` , `movies_imdb_id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `cs4500_spring2018_fishstein`.`user_preferences`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `cs4500_spring2018_fishstein`.`user_preferences` ;

CREATE TABLE IF NOT EXISTS `cs4500_spring2018_fishstein`.`user_preferences` (
  `users_id` INT NOT NULL,
  `preferences` TEXT NULL,
  PRIMARY KEY (`users_id`),
  CONSTRAINT `fk_user_preferences_users1`
    FOREIGN KEY (`users_id`)
    REFERENCES `cs4500_spring2018_fishstein`.`users` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `cs4500_spring2018_fishstein`.`blocked_users`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `cs4500_spring2018_fishstein`.`blocked_users` ;

CREATE TABLE IF NOT EXISTS `cs4500_spring2018_fishstein`.`blocked_users` (
  `blocker_id` INT NOT NULL,
  `blockee_id` INT NOT NULL,
  PRIMARY KEY (`blocker_id`, `blockee_id`),
  INDEX `fk_blocked_users_users2_idx` (`blockee_id` ASC),
  CONSTRAINT `fk_blocked_users_users1`
    FOREIGN KEY (`blocker_id`)
    REFERENCES `cs4500_spring2018_fishstein`.`users` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_blocked_users_users2`
    FOREIGN KEY (`blockee_id`)
    REFERENCES `cs4500_spring2018_fishstein`.`users` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `cs4500_spring2018_fishstein`.`link_types`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `cs4500_spring2018_fishstein`.`link_types` ;

CREATE TABLE IF NOT EXISTS `cs4500_spring2018_fishstein`.`link_types` (
  `name` VARCHAR(127) NOT NULL,
  PRIMARY KEY (`name`))
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `cs4500_spring2018_fishstein`.`account_links`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `cs4500_spring2018_fishstein`.`account_links` ;

CREATE TABLE IF NOT EXISTS `cs4500_spring2018_fishstein`.`account_links` (
  `users_id` INT NOT NULL,
  `link_types_name` VARCHAR(127) NOT NULL,
  PRIMARY KEY (`users_id`, `link_types_name`),
  INDEX `fk_account_links_link_types1_idx` (`link_types_name` ASC),
  CONSTRAINT `fk_account_links_users1`
    FOREIGN KEY (`users_id`)
    REFERENCES `cs4500_spring2018_fishstein`.`users` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_account_links_link_types1`
    FOREIGN KEY (`link_types_name`)
    REFERENCES `cs4500_spring2018_fishstein`.`link_types` (`name`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `cs4500_spring2018_fishstein`.`recommendations`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `cs4500_spring2018_fishstein`.`recommendations` ;

CREATE TABLE IF NOT EXISTS `cs4500_spring2018_fishstein`.`recommendations` (
  `id` INT NOT NULL AUTO_INCREMENT,
  `recommender_id` INT NOT NULL,
  `recommendee_id` INT NOT NULL,
  `movies_id` INT NOT NULL,
  `movies_imdb_id` VARCHAR(16) NOT NULL,
  `message` TEXT NULL,
  PRIMARY KEY (`id`, `recommender_id`, `recommendee_id`, `movies_id`, `movies_imdb_id`),
  INDEX `fk_recommendations_users1_idx` (`recommender_id` ASC),
  INDEX `fk_recommendations_movies1_idx` (`movies_id` ASC, `movies_imdb_id` ASC),
  INDEX `fk_recommendations_users2_idx` (`recommendee_id` ASC),
  CONSTRAINT `fk_recommendations_users1`
    FOREIGN KEY (`recommender_id`)
    REFERENCES `cs4500_spring2018_fishstein`.`users` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_recommendations_movies1`
    FOREIGN KEY (`movies_id` , `movies_imdb_id`)
    REFERENCES `cs4500_spring2018_fishstein`.`movies` (`id` , `imdb_id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_recommendations_users2`
    FOREIGN KEY (`recommendee_id`)
    REFERENCES `cs4500_spring2018_fishstein`.`users` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


SET SQL_MODE=@OLD_SQL_MODE;
SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS;
SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS;
